--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,8 +45,8 @@
         <a href="https://github.com/Izabelly-Melo" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://www.youtube.com/watch?v=pkKu9hLT-t8" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
+        <a href='mailto:izabellycristinemelo@gmail.com' target="_blank">
+          <ion-icon name="mail-outline"></ion-icon>
         </a>
         <a href="https://www.linkedin.com/in/izabelly-melo/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
