correção da img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="assets/sukuna.png" alt="sukuna" />
+        <img src="assets/itadori.png" alt="itadori" />
         <!-- https://fonts.google.com -->
         <p>Jujutsu Kaisen</p>
         </div>
