--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Jujutsu Kaisen</p>
         </div>
         <div id="switch" onclick="toggleMode()">
-          <button>a</button>
+          <button></button>
           <span></span>
         </div>
 
